@@ -130,6 +130,11 @@ under the License.
     </repositories>
     <dependencies>
         <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+          <version>12.0</version>
+        </dependency>
+        <dependency>
           <groupId>org.apache.hcatalog</groupId>
           <artifactId>hcatalog-core</artifactId>
           <!-- TODO: Use 0.5.0 stable release -->
